--- a/public/registro.html
+++ b/public/registro.html
@@ -34,6 +34,17 @@
                             <label for="email">E-mail:</label>
                             <input type="email" id="email" name="email" class="form-control" required>
                         </div>
+                        <div class="form-group d-flex">
+                            <div class="mr-2">
+                                <label for="nombre">Nombre(s):</label>
+                                <input type="text" id="nombre" name="nombre" class="form-control" required>
+                            </div>
+                            <div>
+                                <label for="apellidos">Apellidos:</label>
+                                <input type="text" id="apellidos" name="apellidos" class="form-control" required>
+                            </div>
+                        </div>
+                        
                         <div class="form-group">
                             <label for="password">Contraseña:</label>
                             <input type="password" id="password" name="password" class="form-control" required>
@@ -42,7 +53,6 @@
                             <button type="button" id="singUp" name="signup_submit"
                                 class="btn btn-primary btn-registro">Enviar</button>
                         </div>
-
                     </form>
                 </div>
             </div>
