--- a/public/chat.html
+++ b/public/chat.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="img/file.ico">
     <link rel="stylesheet" href="css/home.css">
-    <title>Tareas</title>
+    <link rel="stylesheet" href="css/chat.css">
+    <title>Chat</title>
 </head>
 
 <body>
-    <div class="wrapper vh-100">
+    <div class="wrapper">
         <!-- Sidebar -->
         <nav id="sidebar">
             <!-- Logo de la empresa -->
@@ -37,35 +38,36 @@
             </div>
         </nav>
 
-        <!-- Contenido Principal -->
+        <!-- Main Content -->
         <div class="content">
             <div class="header-horizontal">
                 <div class="user-profile">
                     <h5>¡Bienvenido(a) <span id="nombreUsuario"></span>!</h5>
                 </div>
-                <div class="optiones-header">
-                    <div class="notification">
-                        <i class="fas fa-bell"></i>
-                    </div>
-                    <div class="logout-btn" id="logoutButton">
-                        <a href="#" class="btn btn-danger">Cerrar Sesión</a>
-                    </div>
+                <div class="options-header">
+                    <i class="fas fa-bell fa-lg mr-3"></i>
+                    <a href="#" class="btn btn-danger btn-sm" id="logoutButton">Cerrar Sesión</a>
                 </div>
             </div>
 
-            <!-- Título del espacio de trabajo -->
-            <div class="workspace-title">
-                <h3>Historial Tareas</h3>
-                <div id="historialTareasContainer" class="list-group">
-                    <!-- Aquí se mostrarán las tareas del historial -->
+            <!-- Chat Section -->
+            <div id="chat">
+                <div id="mensajes">
+                    <!-- Messages will appear here -->
+                </div>
+                <div class="input-area">
+                    <input type="text" id="mensajeInput" placeholder="Escribe tu mensaje...">
+                    <button id="enviarBtn">Enviar</button>
                 </div>
             </div>
         </div>
     </div>
+
     <script>
         document.getElementById("nombreUsuario").textContent = sessionStorage.getItem("nombreUsuarioSesion") || "usuario";
     </script>
-    <script type="module" src="./js/mostrarTareasUsuario.js"></script>
+    <script type="module" src="./js/chat.js"></script>
     <script type="module" src="./js/logout.js"></script>
 </body>
+
 </html>
