--- a/public/miembrosEquipo.html
+++ b/public/miembrosEquipo.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="img/file.ico">
     <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/miembros.css">
     <title>Tareas</title>
 </head>
 
 <body>
-    <div class="wrapper vh-100">
+    <div class="wrapper d-flex vh-100">
         <!-- Sidebar -->
         <nav id="sidebar">
             <!-- Logo de la empresa -->
@@ -37,27 +38,34 @@
             </div>
         </nav>
 
+
         <!-- Contenido Principal -->
-        <div class="content">
+        <div class="content w-100">
+            <!-- Header de bienvenida y opciones -->
             <div class="header-horizontal">
                 <div class="user-profile">
                     <h5>¡Bienvenido(a) <span id="nombreUsuario"></span>!</h5>
                 </div>
-                <div class="optiones-header">
-                    <div class="notification">
+                <div class="optiones-header d-flex align-items-center">
+                    <div class="notification mr-3">
                         <i class="fas fa-bell"></i>
                     </div>
-                    <div class="logout-btn" id="logoutButton">
-                        <a href="#" class="btn btn-danger">Cerrar Sesión</a>
+                    <div class="logout-btn">
+                        <a href="#" class="btn btn-danger btn-sm">Cerrar Sesión</a>
                     </div>
                 </div>
             </div>
 
-            <!-- Título del espacio de trabajo -->
+            <!-- Título del espacio de trabajo y lista de miembros -->
             <div class="workspace-title">
-                <h3>Historial Tareas</h3>
-                <div id="historialTareasContainer" class="list-group">
-                    <!-- Aquí se mostrarán las tareas del historial -->
+                <h3>Miembros del Equipo</h3>
+                <div class="input-group col-md-6 p-2">
+                    <input type="email" class="form-control" id="emailColaborador" placeholder="Correo del colaborador"
+                        aria-label="Correo del colaborador">
+                    <button type="button" class="btn btn-outline-primary" id="addMiembro">Agregar Miembro</button>
+                </div>
+                <div class="miembros-lista mb-4 d-flex">
+                    <!-- Los miembros se agregarán aquí dinámicamente -->
                 </div>
             </div>
         </div>
@@ -65,7 +73,8 @@
     <script>
         document.getElementById("nombreUsuario").textContent = sessionStorage.getItem("nombreUsuarioSesion") || "usuario";
     </script>
-    <script type="module" src="./js/mostrarTareasUsuario.js"></script>
+    <script type="module" src="./js/miembrosEquipo.js"></script>
     <script type="module" src="./js/logout.js"></script>
 </body>
+
 </html>
