--- a/public/nuevoEquipo.html
+++ b/public/nuevoEquipo.html
@@ -42,13 +42,13 @@
         <div class="content">
             <div class="header-horizontal">
                 <div class="user-profile">
-                    <h5>¡Bienvenido usuario!</h5>
+                    <h5>¡Bienvenido(a) <span id="nombreUsuario"></span>!</h5>
                 </div>
                 <div class="optiones-header">
                     <div class="notification">
                         <i class="fas fa-bell"></i>
                     </div>
-                    <div class="logout-btn">
+                    <div id="logoutButton" class="logout-btn">
                         <a href="#" class="btn btn-danger">Cerrar Sesión</a>
                     </div>
                 </div>
@@ -60,28 +60,37 @@
                     <div class="container text-center">
                         <h2 class="mb-3">Crear un Nuevo Equipo</h2>
                     </div>
-                    <form action="">
+                    <form id="crearGrupo">
                         <div class="input-group mb-3">
                             <span class="input-group-text">Nombre del equipo:</span>
-                            <input type="text" class="form-control" placeholder="Ingresa el nombre del equipo" aria-label="Nombre del equipo" required>
+                            <input type="text" class="form-control" id="nombreEquipo" placeholder="Ingresa el nombre del equipo" aria-label="Nombre del equipo" required>
                         </div>
                         <p>Agrega colaboradores con el correo que están registrados.</p>
                         <div class="input-group mb-3">
-                            <input type="email" class="form-control" placeholder="Correo del colaborador" aria-label="Correo del colaborador">
-                            <button type="button" class="btn btn-outline-primary" id="add-member">Agregar Miembro</button>
+                            <input type="email" class="form-control" id="emailColaborador" placeholder="Correo del colaborador" aria-label="Correo del colaborador">
+                            <button type="button" class="btn btn-outline-primary" id="addMiembro">Agregar Miembro</button>
+                        </div>
+                        <div class="input-group mb-3">
+                            <input type="email" class="form-control" id="emailEliminar" placeholder="Correo del colaborador a eliminar" aria-label="Correo del colaborador a eliminar">
+                            <button type="button" class="btn btn-outline-danger" id="removeMiembro">Eliminar Miembro</button>
                         </div>
                         <div class="form-floating">
                             <p>Colaboradores:</p>
-                            <textarea class="form-control" style="height: 150px" disabled></textarea>
+                            <textarea class="form-control" id="listaMiembros" style="height: 150px" disabled></textarea>
                         </div>
                         <div class="container d-flex justify-content-center p-3">
-                            <button type="submit" class="btn btn-success w-50">Crear Equipo</button>
+                            <button type="submit" id="crearEquipo" class="btn btn-success w-50">Crear Equipo</button>
                         </div>                        
                     </form>
                 </div>
             </div>
         </div>
     </div>
+    <script>
+        document.getElementById("nombreUsuario").textContent = sessionStorage.getItem("nombreUsuarioSesion") || "usuario";
+    </script>
+    <script type="module" src="./js/agregarEquipo.js"></script>
+    <script type="module" src="./js/logout.js"></script>
 </body>
 
 </html>
