--- a/public/tareasEquipo.html
+++ b/public/tareasEquipo.html
@@ -36,12 +36,11 @@
                 <h4>Todo tu equipo, una sola conversación.</h4>
             </div>
         </nav>
-
         <!-- Contenido Principal -->
         <div class="content">
             <div class="header-horizontal">
                 <div class="user-profile">
-                    <h5>¡Bienvenido usuario!</h5>
+                    <h5>¡Bienvenido(a) <span id="nombreUsuario"></span>!</h5>
                 </div>
                 <div class="optiones-header">
                     <div class="notification">
@@ -52,7 +51,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- Título del espacio de trabajo -->
             <div class="workspace-title">
                 <div class="container p-4">
@@ -62,23 +60,20 @@
                     <div class="col-md-4">
                         <div class="card">
                             <div class="card-header">
-                                Lista de Tareas
+                                Pendientes
                             </div>
                             <div class="card-body">
-                                <ul class="list-group">
-                                    <li class="list-group-item">Tarea 1</li>
-                                    <li class="list-group-item">Tarea 2</li>
-                                </ul>
+                                <ul id="pendientes" class="list-group"></ul>
                             </div>
                         </div>
-                    </div>
+                    </div> 
                     <div class="col-md-4">
                         <div class="card">
                             <div class="card-header">
-                                En proceso
+                                En Curso
                             </div>
                             <div class="card-body">
-                                <input type="text" class="form-control" placeholder="Tarea">
+                                <ul id="enCurso" class="list-group"></ul>
                             </div>
                         </div>
                     </div>
@@ -88,16 +83,27 @@
                                 Hecho
                             </div>
                             <div class="card-body">
-                                <input type="text" class="form-control" placeholder="Tarea">
+                                <ul id="hecho" class="list-group"></ul>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div id="detalleTarea">
+                <h4>Detalles de la tarea</h4>
+                <p id="detalleTitulo"></p>
+                <p id="detalleDescripcion"></p>
+                <p id="detalleFecha"></p>
+                <p id="detalleEstado"></p>
+                <p id="detalleResponsable"></p>
+            </div>
         </div>
     </div>
     </div>
-
+    <script>
+        document.getElementById("nombreUsuario").textContent = sessionStorage.getItem("nombreUsuarioSesion") || "usuario";
+    </script>
+    <script type="module" src="./js/mostrarTareasEquipo.js"></script>
+    <script type="module" src="./js/logout.js"></script>
 </body>
-
 </html>
