--- a/public/home.html
+++ b/public/home.html
@@ -63,7 +63,7 @@
                             <h5>Nuevo equipo</h5>
                         </div>
                     </div>
-                    <div id="equiposContainer">
+                    <div id="equiposContainer" class="container d-flex flex-wrap justify-content-start">
                     </div>
                 </div>
             </div>
