--- a/public/registro.html
+++ b/public/registro.html
@@ -26,14 +26,6 @@
                     </div>
                     <h2 class="text-center mb-4">Registro</h2>
                     <form id="registroForm">
-                        <div class="form-group">
-                            <label for="username">Usuario:</label>
-                            <input type="text" id="username" name="username" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">E-mail:</label>
-                            <input type="email" id="email" name="email" class="form-control" required>
-                        </div>
                         <div class="form-group d-flex">
                             <div class="mr-2">
                                 <label for="nombre">Nombre(s):</label>
@@ -44,10 +36,19 @@
                                 <input type="text" id="apellidos" name="apellidos" class="form-control" required>
                             </div>
                         </div>
-                        
-                        <div class="form-group">
-                            <label for="password">Contraseña:</label>
+                        <div class="form-group d-flex">
+                            <div class="mr-2">
+                                <label for="username">Usuario:</label>
+                                <input type="text" id="username" name="username" class="form-control" required>
+                            </div>
+                            <div>
+                                <label for="password">Contraseña:</label>
                             <input type="password" id="password" name="password" class="form-control" required>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">E-mail:</label>
+                            <input type="email" id="email" name="email" class="form-control" required>
                         </div>
                         <div class="d-flex justify-content-center container-btn-enviar">
                             <button type="button" id="singUp" name="signup_submit"
